[package]
name = "nextion_flash"
version = "0.1.0"
authors = ["Dejan Noveski <dr.mote@gmail.com>"]
description = "Nextion Flash - Serial flasher for Nextion displays"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
serial2 = "0.2.2"
log = { version = "0.4", features = ["std"] }
